# sgard

./: .gitignore  .golangci.yaml  .goreleaser.yaml  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Makefile  PROGRESS.md  PROJECT_PLAN.md  README.md  flake.nix  go.mod  go.sum  sgard.cc
.github/workflows/: release.yml
.trunk/: trunk.yaml
client/: auth.go  auth_test.go  client.go  client_test.go  e2e_test.go
cmd/sgard/: add.go  checkpoint.go  diff.go  encrypt.go  exclude.go  fido2.go  identity.go  info.go  init.go  list.go  lock.go  main.go  mirror.go  prune.go  pull.go  push.go  remote.go  remove.go  restore.go  status.go  tag.go  target.go  verify.go  version.go
garden/: diff.go  diff_test.go  e2e_test.go  encrypt.go  encrypt_e2e_test.go  encrypt_fido2.go  encrypt_fido2_test.go  encrypt_rotate_test.go  encrypt_test.go  exclude.go  exclude_test.go  fido2_hardware.go  fido2_nohardware.go  garden.go  garden_test.go  hasher.go  identity.go  info.go  info_test.go  list.go  list_test.go  lock.go  lock_test.go  locked_combo_test.go  locked_test.go  mirror.go  mirror_test.go  prune.go  prune_test.go  remove.go  remove_test.go  tags.go  target.go  targeting.go  targeting_ops_test.go  targeting_test.go  verify.go  verify_test.go
integration/: phase4_test.go  phase5_test.go
manifest/: manifest.go  manifest_test.go
proto/: header.proto  homedir.proto  path.proto
scripts/: install-depdendencies.sh
server/: auth.go  auth_test.go  convert.go  convert_test.go  server.go  server_test.go  tls_test.go
sgardpb/: sgard.pb.go  sgard_grpc.pb.go
store/: store.go  store_test.go
(+4 files in other folders)
